# caby-ride

./: .env  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  worker.py
backend/app/core/: config.py
backend/app/services/: maps.py
cabyride-venv/Scripts/: activate  activate.bat
frontend/: Dockerfile  next.config.js  package.json
frontend/.next/: _events.json  trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/client-development-fallback/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @clerk.js  @peculiar.js  @react-google-maps.js  @socket.io.js  @swc.js  asn1js.js  cookie.js  deepmerge.js  dot-case.js  engine.io-client.js  engine.io-parser.js  has-flag.js  lower-case.js  lucide-react.js  map-obj.js  ms.js  next.js  no-case.js  node-fetch-native.js  pvtsutils.js  pvutils.js  snake-case.js  snakecase-keys.js  socket.io-client.js  socket.io-parser.js  supports-color.js  swr.js  tslib.js  use-sync-external-store.js  webcrypto-core.js  ws.js  xmlhttprequest-ssl.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/chunks/app/: layout.js  page.js
frontend/.next/static/webpack/: webpack.435ea1f184b40bcd.hot-update.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
(+2 files in other folders)
